Added add button

--- a/views/users.hbs
+++ b/views/users.hbs
@@ -1,6 +1,6 @@
 
   {{> header}}
-  <table class="table">
+  <table class="table table-hover">
     <thead>
       <tr>
         <th>#</th>
@@ -18,4 +18,7 @@
       {{/each}}
     </tbody>
   </table>
+  <div class="addButton">
+    <button type="button" class="btn btn-primary">Add User</button>
+  </div>
 {{> footer}}
