Added add button and post for domain

--- a/views/alias.hbs
+++ b/views/alias.hbs
@@ -20,4 +20,7 @@
       {{/each}}
     </tbody>
   </table>
+  <div class="addButton">
+    <button type="button" class="btn btn-primary">Add Alias</button>
+  </div>
 {{> footer}}
