--- a/views/domains.hbs
+++ b/views/domains.hbs
@@ -11,14 +11,15 @@
       <tr>
         <th scope="row">{{id}}</th>
         <td>{{name}}</td>
+        <td><i class="fa fa-pencil" aria-hidden="true"></i><i class="fa fa-trash" aria-hidden="true"></i></td>
       </tr>
     {{/each}}
   </tbody>
 </table>
 <form action="" method="post">
   <div class="form-group">
-  <label for="POST-name">Name:</label>
-  <input id="POST-name" type="text" name="name">
+  <label for="POST-domain">Domain:</label>
+  <input id="POST-domain" type="text" name="domain">
   <input type="submit" value="Save">
 </div>
 </form>
