DELETE for domains added.

--- a/views/domains.hbs
+++ b/views/domains.hbs
@@ -10,8 +10,8 @@
     {{#each rows}}
       <tr>
         <th scope="row">{{id}}</th>
-        <td>{{name}}</td>
-        <td><i class="fa fa-pencil" aria-hidden="true"></i><i class="fa fa-trash" aria-hidden="true"></i></td>
+        <td class="domain">{{name}}</td>
+        <td><i class="fa fa-pencil edit-domain" aria-hidden="true"></i><i class="fa fa-trash delete-domain" aria-hidden="true"></i></td>
       </tr>
     {{/each}}
   </tbody>
