Added DELETE for user.

--- a/views/users.hbs
+++ b/views/users.hbs
@@ -12,7 +12,8 @@
       <tr>
         <th scope="row">{{id}}</th>
         <td>{{{name}}}</td>
-        <td>{{email}}</td>
+        <td class="userEmail">{{email}}</td>
+        <td><i class="fa fa-pencil edit-user" aria-hidden="true"></i><i class="fa fa-trash delete-user" aria-hidden="true"></i></td>
       </tr>
     {{/each}}
   </tbody>
