--- a/views/alias.hbs
+++ b/views/alias.hbs
@@ -1,5 +1,5 @@
 {{> header}}
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>#</th>
@@ -12,10 +12,17 @@
     {{#each rows}}
       <tr>
         <th scope="row">{{id}}</th>
-        <td class="aliasSource">{{source}}</td>
+        <td class="main-value">{{source}}</td>
         <td>{{{destination}}}</td>
         <td>{{domain}}</td>
-        <td><i class="fa fa-pencil edit-user" aria-hidden="true"></i><i class="fa fa-trash delete-alias" aria-hidden="true"></i></td>
+        <td>
+          <button type="button" class="btn btn-primary">
+            <i class="fa fa-pencil edit-user" aria-hidden="true"></i>
+          </button>
+          <button type="button" class="btn btn-primary btn-delete">
+            <i class="fa fa-trash" aria-hidden="true"></i>
+          </button>
+        </td>
       </tr>
     {{/each}}
   </tbody>
