--- a/views/domains.hbs
+++ b/views/domains.hbs
@@ -1,5 +1,5 @@
  {{> header}}
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>#</th>
@@ -10,8 +10,15 @@
     {{#each rows}}
       <tr>
         <th scope="row">{{id}}</th>
-        <td class="domain">{{name}}</td>
-        <td><i class="fa fa-pencil edit-domain" aria-hidden="true"></i><i class="fa fa-trash delete-domain" aria-hidden="true"></i></td>
+        <td class="main-value">{{name}}</td>
+        <td>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+            <i class="fa fa-pencil edit-domain" aria-hidden="true"></i>
+          </button>
+          <button type="button" class="btn btn-primary btn-delete">
+            <i class="fa fa-trash" aria-hidden="true"></i>
+          </button>
+        </td>
       </tr>
     {{/each}}
   </tbody>
