--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -20,6 +20,29 @@
     </div>
   </div>
 </div>
+
+<!-- Modal for add new domain -->
+<div class="modal fade" id="deleteDomainModal" tabindex="-1" role="dialog" aria-labelledby="domainModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="domainModalLabel">Add new domain</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form method="post">
+          
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Add</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="js/main.js" charset="utf-8"></script>
 </body>
 
